--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,14 @@
     <lombok.version>1.18.6</lombok.version>
     <commons.cli.version>1.4</commons.cli.version>
     <commons.lang.version>3.8.1</commons.lang.version>
-    <kafka.version>1.1.1</kafka.version>
+    <kafka.version>2.3.0</kafka.version>
     <fastjson.version>1.2.58</fastjson.version>
     <snakeyaml.version>1.24</snakeyaml.version>
     <guava.version>27.0.1-jre</guava.version>
     <quartz.version>2.3.0</quartz.version>
     <slf4j.version>1.7.25</slf4j.version>
     <log4j2.version>2.12.1</log4j2.version>
+    <mysql.version>8.0.16</mysql.version>
   </properties>
 
   <dependencies>
@@ -42,6 +43,23 @@
       <scope>provided</scope>
     </dependency>
 
+    <!-- slf4j-api -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>${slf4j.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-nop</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
     <!-- log4j2 -->
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
@@ -88,6 +106,14 @@
       <artifactId>kafka_2.12</artifactId>
       <version>${kafka.version}</version>
     </dependency>
+
+    <!-- mysql -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>${mysql.version}</version>
+    </dependency>
+
   </dependencies>
 
   <build>
