--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <lombok.version>1.18.6</lombok.version>
         <commons.cli.version>1.4</commons.cli.version>
         <commons.lang.version>3.8.1</commons.lang.version>
+        <commons.io.version>2.4</commons.io.version>
         <kafka.version>2.3.0</kafka.version>
         <fastjson.version>1.2.58</fastjson.version>
         <snakeyaml.version>1.24</snakeyaml.version>
@@ -27,6 +28,7 @@
         <log4j2.version>2.12.1</log4j2.version>
         <mysql.version>8.0.16</mysql.version>
         <jedis.version>3.1.0</jedis.version>
+        <httpclient.version>4.5.6</httpclient.version>
     </properties>
 
     <dependencies>
@@ -95,6 +97,13 @@
             <version>${commons.cli.version}</version>
         </dependency>
 
+        <!-- commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons.io.version}</version>
+        </dependency>
+
         <!-- fastjson -->
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -146,6 +155,13 @@
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
             <version>${jedis.version}</version>
+        </dependency>
+
+        <!-- httpclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${httpclient.version}</version>
         </dependency>
 
 
