--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <mysql.version>8.0.16</mysql.version>
         <jedis.version>3.1.0</jedis.version>
         <httpclient.version>4.5.6</httpclient.version>
+        <bcprov.version>1.46</bcprov.version>
     </properties>
 
     <dependencies>
@@ -162,6 +163,12 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>${httpclient.version}</version>
+        </dependency>
+        <!-- 编码加密 -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk16</artifactId>
+            <version>${bcprov.version}</version>
         </dependency>
 
 
